welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: value =< is not a member of Int
def nearHundred(n:Int): Boolean = {if ((100-n)<11||((200-n)=<11)) return true 
                                                           ^